# Skystone

./: .gitignore  build.common.gradle  build.gradle  settings.gradle
FtcRobotController/src/main/: AndroidManifest.xml
OpenCV/: build.gradle
TeamCode/: CMakeLists.txt  build.gradle  build.release.gradle
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/: AutoV1.java  AutoV1_BLUE.java  AutoV1_RED.java  AutoV2_Blue.java  AutoV3_BLUE.java  AutoV4_BLUE.java  BasicDrive.java  BlinkinTest.java  ColorViewer.java  DualImu.java  Iterative_BasicDrive.java  KodaKids.java  LineFollower.java  MM_AutoOpMode.java  MM_LinearOpMode.java  MM_OpenCV.java  MM_TensorFlow.java  MM_Vuforia.java  MainDriverControl.java  MatTest.java  MecanumChassis2019.java  MecanumYellow.java  MinOpenCV.java  OpenCVLoop.java  OpenCVLoopBlue.java  OpenCVLoopRed.java  OpenCVTests.java  PartyCity.java  PartyCity_Copy.java  SensorBNO055IMU.java  TensorTests.java  TestAutoOpMode.java  VuforiaTests.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/MM_Classes/: BarebonesYellow.java  MM_AccelerationIntegrator.java  MM_IterativeOpMode.java  MM_LinearOpMode.java  MM_LinearOpModeV2.java  MM_OpenCV.java  MM_TensorFlow.java  MM_Vuforia.java  MecanumChassis2019.java  MecanumYellow.java
doc/javadoc/: allclasses-frame.html  allclasses-noframe.html  index-all.html  overview-tree.html
gradle/wrapper/: gradle-wrapper.properties
openCV/: build.gradle
openCV/native/jni/: OpenCVConfig.cmake
openCV/native/jni/abi-armeabi-v7a/: OpenCVConfig.cmake  OpenCVModules-release.cmake
(+6 files in other folders)
